03_RetailStore_Helm_with_Data_Plane/kubernetes/retail-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-store-http-ip-mode
  namespace: retailstore

  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: retail-store-http-ip-mode

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP

    alb.ingress.kubernetes.io/healthcheck-port: traffic-port

    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/readiness

    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"

    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"

    alb.ingress.kubernetes.io/success-codes: "200"

    alb.ingress.kubernetes.io/healthy-threshold-count: "2"

    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"

spec:
  ingressClassName: alb

  defaultBackend:
    service:
      name: retail-store-sample-ui-chart
      port:
        number: 80
